--- a/BeslogicTestApp/src/index.html
+++ b/BeslogicTestApp/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/62e4564a36.js" crossorigin="anonymous"></script>
 </body>
 </html>
